fix(swagger,models): debug swagger schema and model definitions, add mongoose-autopopulate and refactor models accordingly
