# module/auth/auth.controller.mjs
@@ -7,7 +7,7 @@ export const register = async (req, res, next) => {
     try {
         await registerValidationSchema.validate(req.body, { abortEarly: false });
 
-        const { _id, __v, password, googleId, ...data } = await authService.registerUser(req.body);
+        const { _id, ...data } = await authService.registerUser(req.body);
 
         return createLocalizedSuccess(res, 'Register', data);
     } catch (error) {
